tests/NormalTests/paczka1/small_fuzzy/43568519.err
Error in line 6: n7IO S925 37,9
Error in line 8: Rze702NUlc S171 45,8
